[tool.poetry]
name = "rushmore-tools"
version = "0.1.0"
description = ""
authors = ["Marcus Risanger <69350948+MarcusRisanger@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
black = "^22.1.0"
isort = "^5.10.1"
dacite = "^1.6.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
